# kaggle_template

./: .gitignore  NOTEBOOK_TEMPLATE.md  README.md  kaggle_notebook_init.py  pyproject.toml
configs/: _base.json  default.json
configs/comp_example/: train.json
data/: README.md
docs/: README.md
outputs/: README.md
scripts/: infer.py  make_submission.py  package_dataset.py  train.py
src/: __init__.py  config.py  config_io.py  config_schema.py  data.py  ensemble.py  experiment.py  feature_store.py  features.py  inference.py  model_io.py  models.py  split.py  submission.py  train.py  utils.py
src/features/: README.md
src/models/: README.md
src/tasks/: README.md
src/utils/: __init__.py  experiment_id.py  metadata.py  registry.py  submission_validator.py
tests/: test_experiment_utils.py  test_feature_store.py  test_pipeline.py
tests/fixtures/: README.md
