[project]
name = "kaggle-template"
version = "0.1.0"
description = "Reusable Kaggle notebook template"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=1.7"]
test = [
  "pytest>=7.0",
  "scikit-learn>=1.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
